# Secure-communication-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
RustDll/: Cargo.toml  crypto.h
RustDll/dll/: Crypto.dll.exp  Crypto.dll.lib
RustDll/src/: lib.rs  lib.rs.bak
RustDll/src/ElGamal/: elgamal.rs  mod.rs
RustDll/src/Rsa/: mod.rs  rsa.rs
RustDll/src/aes/: internal.rs  mod.rs  modes.rs
inc/: network.h  run.h
inc/certificate/: certificate.h  person.h
inc/crypto/: AES.h  ElGamal.h  Rsa.h  sha256.h
src/: network.cpp  run.cpp
src/certificate/: certificate.cpp  person.cpp
src/crypto/: AES.cpp  ElGamal.cpp  Rsa.cpp  sha2.cpp
